--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
                 <span>&#9733;</span> 
                 <span>&#9733;</span> 
                 <span>&#9733;</span> 
-                <span>&#9734;</span> 
+                <span>&#9733;</span> 
             </div>
-            <p>4 out of 5 stars</p>
+            <p>5 out of 5 stars</p>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -367,9 +367,9 @@
                     <span>&#9733;</span> 
                     <span>&#9733;</span> 
                     <span>&#9733;</span> 
-                    <span>&#9734;</span> 
+                    <span>&#9733;</span> 
                 </div>
-                <p>4 out of 5 stars</p>
+                <p>5 out of 5 stars</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -412,9 +412,9 @@
                 <span>&#9733;</span> 
                 <span>&#9733;</span> 
                 <span>&#9733;</span> 
-                <span>&#9734;</span> 
+                <span>&#9733;</span> 
             </div>
-            <p>4 out of 5 stars</p>
+            <p>5 out of 5 stars</p>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -457,9 +457,9 @@
                 <span>&#9733;</span> 
                 <span>&#9733;</span> 
                 <span>&#9733;</span> 
-                <span>&#9734;</span> 
+                <span>&#9733;</span> 
             </div>
-            <p>4 out of 5 stars</p>
+            <p>5 out of 5 stars</p>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -612,16 +612,15 @@
             <div class="mx-1 w-50">
                 <h2 class="display-6 fw-semibold">About Us</h2>
                 <p class="fw-light">
-                    Welcome to Bloom Flower Bouquet shop, where every bloom tells a story! Nestled in the heart of Calaca Batangas, our flower bouquet shop is dedicated to bringing beauty and joy to your life through fresh, vibrant flowers and unique arrangements.
-                    Founded by passionate florists with a love for nature and creativity, we believe that flowers have the power to brighten any occasion, from weddings and anniversaries to simple moments of everyday joy. Our team carefully selects each stem, ensuring that our bouquets reflect the seasons and the latest trends.
+                    Welcome to GNG Motorcycles, where passion for two wheels meets performance! We are your trusted destination for top-quality motorcycles, accessories, and expert services. Whether you're a seasoned rider or just starting your journey, our team of enthusiasts is here to help you find the perfect ride that suits your style and needs. From the latest models to custom builds, we pride ourselves on delivering the best in craftsmanship and customer care. At GNG Motorcycles, we believe every ride should be thrilling, safe, and unforgettable. Let’s rev up your adventure!
                 </p>
                 <div class="mt-3 d-lg-flex justify-content-center">
-                    <a href="https://facebook.com/jemarcpascua.delarosa" class="btn btn-outline-info mx-2">Facebook</a>
-                    <a href="https://tiktok.com/@cramej27" class="btn btn-outline-dark mx-2">TikTok</a>
-                    <a href="tel:+9317962098" class="btn btn-outline-danger mx-2">Call Us</a>
+                    <a href="https://www.facebook.com/profile.php?id=61564045388191" class="btn btn-outline-info mx-2">Facebook</a>
+                    <a href="https://tiktok.com/@jolziiii" class="btn btn-outline-dark mx-2">TikTok</a>
+                    <a href="tel:+9751285881" class="btn btn-outline-danger mx-2" title="Call 09751285881">Call Us</a>
                 </div>
             </div>
-            <img src="assets/about1.jpg" class="image22 mx-auto d-block" alt="About Bloom Flower Shop">
+            <img src="assets/GNG2.png" class="image22 mx-auto d-block" alt="GNG Logo" style="width: 300px; ">
         </div>
     </section>
     
@@ -629,13 +628,13 @@
         
 
         <footer class="bg-dark text-light p-5 text-center">
-            <h2 class="display-6 fw-light mb-4 text-white">Bloom Flower Bouquet Shop</h2>
+            <h2 class="display-6 fw-light mb-4 text-white">GNG Motorcycles</h2>
             <ul class="nav jutify-content-center">
                 <li class="nav-item">
                     <a class="nav-link text -light fw-light" aria-current="page" href="#Home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text -light fw-light" aria-current="page" href="#Flowers">Flowers</a> 
+                    <a class="nav-link text -light fw-light" aria-current="page" href="#Models">Models</a> 
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text -light fw-light" aria-current="page" href="#About">About</a>
